# track-me

./: .gitignore  LICENSE  README.md  start-dashboard.sh  track-me.service
dashboard/: index.html  main.js  package-lock.json  package.json  style.css
notes/: 00-problem-statement.md  01-how-to-get-data.md  02-language-to-use.md  03-parse-stream.md  tmp.out.txt
track-me/: Cargo.toml
track-me/src/: config.rs  event.rs  idle.rs  ipc.rs  main.rs  tracker.rs
track-me/src/provider/: hyprland.rs  mod.rs  sway.rs  x11.rs
track-me/src/store/: jsonl.rs  mod.rs  sqlite.rs
